examples/myapptwo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapptwo
  labels:
    istio-injection: enabled
