examples/myapptwo/myapptwo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapptwo
  namespace: myapptwo
  labels:
    app: myapptwo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: myapptwo
