examples/myapptwo/myapptwo-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: myapptwo-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "myapptwo.example.com"
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
    - "myapptwo.example.com"
    tls:
      mode: SIMPLE
      credentialName: wildcard-example-com-tls
